# ai-admissions-platform

./: .env.example  .gitignore  LICENSE  PRD.md  PRODUCT.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/app/: __init__.py  main.py
apps/api/app/agents/: __init__.py  prompts.py  service.py  tools.py
apps/api/app/api/v1/: __init__.py  chat.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/llm/: base.py  claude.py  deepseek.py  factory.py  openai.py  types.py
apps/api/app/models/: agent.py  base.py  conversation.py  kb_chunk.py  kb_document.py  lead.py  message.py  prompt_template.py
apps/api/app/services/rag/: __init__.py  document_loader.py  embedder.py  retriever.py  service.py  text_splitter.py  vector_store.py
apps/api/scripts/: eval_rag.py  ingest_kb.py  seed_data.py
apps/api/tests/: test_agents.py  test_llm.py  test_rag.py
apps/web/: .env.example  Dockerfile  env.d.ts  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/demo/chat/: page.tsx
apps/web/src/: App.vue
apps/web/src/assets/styles/: main.css
apps/web/src/components/: AgentCard.vue  ChatMessage.vue  TerminalHero.vue
apps/web/src/composables/: useChat.ts  useSessionHistory.ts
apps/web/src/lib/: api.ts
apps/web/src/router/: index.ts
apps/web/src/types/: chat.ts
apps/web/src/views/: DemoChatView.vue  DemoCompareView.vue  HomeView.vue  NotFoundView.vue
data/eval/: rag_eval.jsonl
data/knowledge_base/cases/: cases.md
data/knowledge_base/courses/: courses.md
data/knowledge_base/faq/: faq.md
data/knowledge_base/scripts/: scripts.md
data/knowledge_base/sop/: sop.md
data/knowledge_base/teachers/: teachers.md
docker/: init-pgvector.sql
