[project]
name = "ai-admissions-platform"
version = "0.1.0"
description = "教培机构 AI 招生顾问平台 - 多智能体 + RAG + 工作流"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "张艺达", email = "[email protected]" }
]
keywords = ["ai-agent", "rag", "fastapi", "education", "chatbot"]
readme = "README.md"

dependencies = []

[tool.uv.workspace]
members = ["apps/api", "packages/shared"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
addopts = "-v --tb=short"