[project]
name = "edu-api"
version = "0.1.0"
description = "AI-Admissions Platform FastAPI Backend"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web 框架
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",

    # 数据库
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",

    # 缓存 / 限流
    "redis[hiredis]>=5.2.0",
    "slowapi>=0.1.9",

    # LLM 适配
    "anthropic>=0.39.0",
    "openai>=1.54.0",  # DeepSeek 用 OpenAI 兼容协议
    "tenacity>=9.0.0",  # 重试

    # RAG / 向量
    "chromadb>=0.5.18",
    "pgvector>=0.3.6",
    "langchain-text-splitters>=0.3.0",
    "unstructured[md,pdf,docx]>=0.16.0",

    # Embedding（可选 bge 本地）
    "sentence-transformers>=3.2.0; platform_machine == 'x86_64'",

    # 工具
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "rich>=13.9.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[project.scripts]
edu-api = "app.main:run"
seed-data = "scripts.seed_data:main"
ingest-kb = "scripts.ingest_kb:main"
eval-rag = "scripts.eval_rag:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"